[gd_scene load_steps=12 format=2]

[ext_resource path="res://3DScenes/BigRoomDeadEnd.tscn" type="PackedScene" id=1]
[ext_resource path="res://TitleScreen/Images/coollogo_com-84443575.png" type="Texture" id=2]
[ext_resource path="res://3DScenes/Cube.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/ShooterEnemyZombie.tscn" type="PackedScene" id=4]
[ext_resource path="res://TitleScreen/Images/Aquire-BW0ox.otf" type="DynamicFontData" id=5]
[ext_resource path="res://TitleScreen/fade_in/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://TitleScreen/Scripts/title_screen.gd" type="Script" id=7]
[ext_resource path="res://Enemy/BossShooterEnemyZombie.tscn" type="PackedScene" id=8]
[ext_resource path="res://MyWeapons/badgun/AK47Model.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_color = Color( 0.742188, 0.605927, 0.605927, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 118.0
margin_top = 80.0
margin_right = 1158.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 141.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 145.0
margin_right = 1040.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" type="Button" parent="Menu/CenterRow/Buttons"]
margin_right = 518.0
margin_bottom = 60.0
rect_min_size = Vector2( 360, 60 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/NewGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 1, 0.592157, 0.45098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlButton" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 80.0
margin_right = 518.0
margin_bottom = 140.0
rect_min_size = Vector2( 360, 60 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/ControlButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 1, 0.592157, 0.45098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 160.0
margin_right = 518.0
margin_bottom = 220.0
rect_min_size = Vector2( 360, 60 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 1, 0.592157, 0.45098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 240.0
margin_right = 518.0
margin_bottom = 300.0
rect_min_size = Vector2( 360, 60 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 1, 0.592157, 0.45098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 259.0
margin_top = 150.0
margin_right = 259.0
margin_bottom = 150.0

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 449.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Version 1.2.8
Produced by Emmanuel K"

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
color = Color( 0.180392, 0.12549, 0.12549, 0.160784 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.691268, 0 )

[node name="BigRoomDeadEnd" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0962427, -6.03811 )

[node name="Cube" parent="." instance=ExtResource( 3 )]
transform = Transform( 8.8567, 0, 0, 0, 1, 0, 0, 0, 43.1875, 0, 2.07851, 0 )

[node name="ShooterEnemyZombie" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, -0.939693, -4, 0, -11 )

[node name="ShooterEnemyZombie2" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, -0.939693, 4, 0, -11 )

[node name="BossShooterEnemyZombie" parent="." instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 0.9, 0, 8.74228e-08, 0, -1, 0, 0, -10 )

[node name="AK47Model" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ControlButton" to="." method="_on_ControlButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
